fix: atualizar URLs base e melhorar validações nos SDKs
- Atualização da URL base para 'https://api.upay-sistema.onrender.com' em todos os SDKs.
- Melhorias nas validações de entrada e tratamento de erros em PHP, JavaScript e Python.
- Ajustes na documentação e exemplos para refletir as mudanças nas URLs e validações.